# agent01

./: Dockerfile  README.md  pyproject.toml
AI-Frontend/: README.md  angular.json  package-lock.json  package.json
AI-Frontend/src/: index.html
AI-Frontend/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  file-upload-service.service.ts  primeng-material.ts
AI-Frontend/src/app/home/: home.component.css  home.component.html  home.component.ts
AI-Frontend/src/app/instagram-post-generator/: instagram-post-generator.component.html  instagram-post-generator.component.spec.ts  instagram-post-generator.component.ts
AI-Frontend/src/app/sidebarnav/: sidebarnav.component.css  sidebarnav.component.html  sidebarnav.component.spec.ts  sidebarnav.component.ts
AI-Frontend/src/app/upload-image/: upload-image.component.css  upload-image.component.html  upload-image.component.ts
AIFrontned/: README.md  angular.json  package-lock.json  package.json
AIFrontned/src/: index.html
AIFrontned/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  file-upload-service.service.ts
app/: LanggraphOpenAIResearchAssistant.py  aaa
