[tool.poetry]
name = "agent01"
version = "0.1.0"
description = "A FastAPI project"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
python-dotenv = "*"
langgraph = "*"
langchain-community = "*"
langchain-anthropic = "*"
langchain-openai = "*"
asyncio = "*"
tavily-python = "*"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"